# model-forensics

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  GEMINI.md  IDEAS.md  PLAN.md  README.md  RESEARCH.md  cli_test_results.json  comprehensive_test_results.json  create_bert_test_bundles.py  create_proper_test_bundle.py  create_toxic_test_bundles.py  debug_gpt2_layers.py  debug_step_by_step.py  final_test_results.json  full_scale_test.py  manage_safety_cache.py  minimal_test.py  pyproject.toml  pytest.ini  quick_validation_test.py  reset_model_isolation.py  run_full_rca_pipeline.py  run_tests.py  simple_debug.py  test_all_modules.py  test_baseline_collection.py  test_cf_baseline.py  test_flip_detection.py  test_full_rca_pipeline.py  test_intervention_directly.py  test_intervention_system.py  test_is_c_debug.py  test_modules.py  test_no_mocks_validation.py  test_pipeline_results.json  test_quick_validation.py  test_rca_summary.py  (+6 more)
bundles/benign_case_001/: manifest.json  metadata.json  outputs.json
bundles/benign_demo/: inputs.json  manifest.json  metadata.json  outputs.json
bundles/injection_demo/: inputs.json  manifest.json  metadata.json  outputs.json
bundles/injection_incident_001/: external_calls.jsonl  manifest.json  metadata.json  outputs.json
bundles_advanced/async_bundle_benign_1_0/: manifest.json  metadata.json  outputs.json
bundles_advanced/async_bundle_benign_2_1/: inputs.json  manifest.json  metadata.json  outputs.json
bundles_advanced/async_bundle_benign_3_2/: inputs.json  manifest.json  metadata.json  outputs.json
bundles_advanced/async_bundle_injection_3/: manifest.json  metadata.json  outputs.json
bundles_advanced/async_bundle_jailbreak_4/: inputs.json  manifest.json  metadata.json  model_config.json  outputs.json
configs/: default.yaml
docs/api/: README.md  cca_module.md  cf_module.md  (+3 more)
examples/: advanced_recording.py  basic_recording.py  minimal_gpt2_test.py  real_world_forensics.py  replayer_demo.py
results/: intervention_system_test.json  no_mocks_validation.json  rca_analysis_20250813_202914.json  rca_analysis_20250813_203052.json  rca_analysis_20250813_205448.json  rca_pipeline_validation.json  session_session_2655b514_results.json  session_session_52782b9e_results.json  session_session_5786d7c8_results.json  session_session_644df8fa_results.json  session_session_dec39b85_results.json
scenarios/: README_RCA_INTEGRATION.md  __init__.py  baseline_collector.py  load_prompts.py  rca_analyzer.py  run_scenarios.py  safety_cache.py  set-model.sh  utils.py
src/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_recorder.py
(+166239 files in other folders)
